# grokipedia-desktop-wrapper

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  sidebar.html  sidebar.js  style.css
